<resources>
    <string name="app_name">CoShopApp</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="facebook_app_id" translatable="false">332036151117749</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb332036151117749</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="already_a_member">Already a member?</string>
    <string name="tagline">The shopping assistant you didn\'t know you needed.</string>
    <string name="get_started">GET STARTED</string>
    <string name="co_op_shop">CO-OP SHOP</string>
    <string name="sign_up_to_co_op_shop">Sign Up to Co-Op Shop</string>
    <string name="enter_your_password_hint">Enter your password</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="enter_your_e_mail">Enter your e-mail</string>
    <string name="register_user">Register User</string>
    <string name="donthaveaccount">Don\'t have an account?</string>
    <string name="totheregisterpage">Register</string>
    <string name="loginpagetitle">Log in to Co-shop</string>
    <string name="hide_e_mail">Hide E-Mail?</string>
    <string name="get_the_newsletter">Get the Newsletter.</string>
    <string name="enter_your_username">Enter your UserName</string>
    <string name="that_username_already_exists">That username already exists. Enter a different username</string>
    <string name="that_email_already_exists">That Email already exists</string>
    <string name="the_passwords_need_to_match">The passwords need to match</string>
    <string name="error_trying_to_register">Error trying to register.</string>
</resources>
